# skillos

./: .env.example  .gitignore  AGENTS.md  Boot.md  CLAUDE.md  CLAUDE_CODE_ARCHITECTURE.md  GEMINI.md  QWEN.md  README.md  agent_runtime.py  benchmark_dialects.py  benchmark_math.py  benchmark_patch.py  benchmark_physiology.py  cartridge_runtime.py  opencode.json  permission_policy.py  pyproject.toml  pytest.ini  qwen_runtime.py  roclaw_bridge.py  run_scenario.py  sandbox.py  setup_agents.ps1  setup_agents.sh  skillos.py  skillos.sh
.claude/: settings.local.json.example
benchmarks/: benchmark_dialects.py  benchmark_math.py  benchmark_patch.py  benchmark_physiology.py
desktop/: Cargo.toml  README.md  tauri.conf.json
desktop/src-tauri/: Cargo.toml
desktop/src-tauri/src/: commands.rs  main.rs  sidecar.rs
desktop/ui/: app.css  app.js  index.html
docs/: architecture.md  cognitive-pipeline.md  dialects.md  forge.md  memory.md  mobile-testing-guide.md  planning.md  robot.md  running-on-open-models.md  runtimes.md  scenarios.md  security.md  skills.md  tutorial-echo-q.md
examples/: 01_hello_world.md  02_web_research.md  03_code_review.md  04_parallel_research.md  05_data_pipeline.md  06_reflective_loop.md  07_memory_driven.md  08_custom_agent_creation.md  09_autoresearch.md  README.md
forge/: __init__.py  __main__.py  artifacts.py  attestation.py  budget.py  claude_bridge.py  cli.py  executor.py  journal.py  router.py  server.py
mobile/: package-lock.json  package.json
scenarios/: AutoImprove_SelfOptimization.md  AutoResearch_Task.md  CodeAnalysis_Task.md  (+15 more)
(+308 files in other folders)
